Thu Nov  5 20:13:47 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
        * ace/ACE.inl:
        * ace/ACE.cpp:
          Moved nibble2hex from .inl to .cpp file to avoid static
          data in inline function.

Thu Nov  5 13:58:25 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdlib.h:
          Another fix for platforms that define ACE_STRTOLL_EQUIVALENT or
          ACE_STRTOULL_EQUIVALENT.

Thu Nov  5 13:46:34 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdlib.h:
          Fix for platforms that lack strtoll or strtoull.

Thu Nov  5 11:56:13 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdlib.h:
        * ace/OS_NS_stdlib.inl:
          Added ace_strtoll_helper and ace_strtoull_helper to fix compile
          errors if strtoll or strtoull is macro.

Thu Nov  5 11:32:07 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
        * ace/os_include/os_signal.h:
          Use ACE_HAS_CONSISTENT_SIGNAL_PROTOTYPES instead of
          ACE_HAS_LYNXOS50_SIGNALS.

Wed Nov  4 20:57:08 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * bin/MakeProjectCreator/config/global.features:

          Set notify_monitor_control default value be 0.

Wed Nov  4 17:50:05 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Message_Queue_Test.cpp:
          Improved portability

Wed Nov  4 14:51:00 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/Bug_3758_Regression_Test.cpp:
        * tests/OS_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Moved regression test for 3758 to its own file.

Wed Nov  4 11:39:05 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/index.html:
          Updated description for DDS4CCM documentation

Wed Nov  4 00:07:49 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp (resume_handler_i): If asked to resume a
          handler without any bits currently set, just note the handler has