@@ -1,3 +1,8 @@
+Fri Nov  6 08:30:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/fuzz.pl:
+          Also check cdp files for tabs
+
 Thu Nov  5 20:13:47 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * ace/ACE.h:
